--- a/MLC_simplified/src/style/divergingBarChart.css
+++ b/MLC_simplified/src/style/divergingBarChart.css
@@ -42,7 +42,7 @@
 }
 
 .advertissment p {
-  font-size: 14px;
+  font-size: 15px;
   color: var(--main);
   margin-left: 10px;
 }
